--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
     <link rel="stylesheet" href="CSS/Style.css">
 
     <!-- ICON -->
-    <link rel="icon" href="IMAGES/Logo-removebg-preview.png" type="image/png">
+    <link rel="icon" href="Resources/Logo-removebg-preview.png" type="image/png">
 </head>
 
-
 <body>
+
+    <video  autoplay muted loop id="video-background">
+        <source src="Resources/12716-241674181_small.mp4" type="video/mp4">
+    </video>
+        
 
  <!--Header of the website-->
  <header>
     <div class="logo-container">
-        <img src="IMAGES/Logo-removebg-preview.png" alt="logo-portfolio">
+        <img src="Resources/Logo-removebg-preview.png" alt="logo-portfolio">
     </div>
 
     <h1>Portfolio</h1>
@@ -36,6 +40,8 @@
 
 <!-- Main (About me, Projects, Skills, Contact ) -->
 <main>
+
+    <!-- About me section -->
     <section class="About-section">
         <div class="about-text">
             <h2>About me</h2>
@@ -46,27 +52,33 @@
         </div>  
     </section>
 
-
+<!-- Projects section
     <section class="Projects">
         <div class="Projects-text">
             <h2>Projects</h2>
         </div>
-    </section>
+    </section> -->
 
+<!-- Skills section -->
     <section class="Skills">
         <div class="Skills-text">
             <h2>My skills</h2>
         </div>
     </section>
 
+    <!-- Skills contact
     <section class="Contact">
         <div class="Contact-text">
             <h2>Contact me</h2>
         </div>
-    </section>
+    </section> -->
 
 
 </main>
+
+
+
+
 
 
 <!-- Footer section -->
@@ -75,10 +87,6 @@
     &copy; <p>Anderson Estiduar Blandón - Riwi </p>
     <p>2025</p>
 </footer>
-
-
-
-
    
 </body>
 </html>
