--- a/index.html
+++ b/index.html
@@ -25,61 +25,85 @@
     </div>
 
     <h1>Portfolio</h1>
-    <!-- Navigation bar -->
-    <nav>
-        <ul>
-            <li><a href="#About-section">About me</a></li>
-            <li><a href="#Projects">Projects</a></li>
-            <li><a href="#Skills">Skills</a></li>
-            <li><a href="#Contact">Contact me</a></li>
-        </ul>
-    <h2>Anderson Estiduar Blandón ALvarez</h2>    
-    </nav>
+<!-- Navigation bar -->
+<nav>
+    <ul>
+        <li><a href="#About-section">About me</a></li>
+        <li><a href="#Projects">Projects</a></li>
+        <li><a href="#Skills">Skills</a></li>
+        <li><a href="skill.html">Contact me</a></li>
+    </ul>
+<h2>Anderson Estiduar Blandón ALvarez</h2>    
+</nav>
+
 </header>
 
 
-<!-- Main (About me, Projects, Skills, Contact ) -->
-<main>
+<!-- About me section -->
+<section class="About-section">
+    <div class="about-text">
+        <h2>About me</h2>
+        <p>I’m a software developer with strong skills in web development.
+        I work with HTML and CSS to build responsive and user-friendly interfaces. 
+        I use JavaScript to add interactivity and dynamic features to websites. 
+        On the backend, I work with PHP to handle server-side logic and database connections.</p>
+    </div>  
+    <!-- About image -->
+    <div class="about-image">
+        <img src="Resources/WhatsApp Image 2025-05-25 at 4.09.04 PM.jpeg" alt="Developer" id="dev">
+    </div>
+</section>
 
-    <!-- About me section -->
-    <section class="About-section">
-        <div class="about-text">
-            <h2>About me</h2>
-            <p>I’m a software developer with strong skills in web development.
-            I work with HTML and CSS to build responsive and user-friendly interfaces. 
-            I use JavaScript to add interactivity and dynamic features to websites. 
-            On the backend, I work with PHP to handle server-side logic and database connections.</p>
-        </div>  
-    </section>
 
-<!-- Projects section
-    <section class="Projects">
-        <div class="Projects-text">
-            <h2>Projects</h2>
-        </div>
-    </section> -->
 
-<!-- Skills section -->
+
     <section class="Skills">
         <div class="Skills-text">
             <h2>My skills</h2>
+            <p>My software knowledge</p>
+        </div>
+
+        <div class="skill">
+            <span>PHP</span>
+            <div class="progress-bar">
+                <div class="progress" style="width: 75%;"></div>
+                <span class="percentage">75%</span>
+            </div>
+        </div>
+
+        <div class="skill">
+            <span>HTML</span>
+            <div class="progress-bar">
+                <div class="progress" style="width: 70%;"></div>
+                <span class="percentage">70%</span>
+            </div>
+        </div>
+
+        <div class="skill">
+            <span>CSS</span>
+            <div class="progress-bar">
+                <div class="progress" style="width: 95%;"></div>
+                <span class="percentage">95%</span>
+            </div>
+        </div>
+
+        <div class="skill">
+            <span>Photoshop</span>
+            <div class="progress-bar">
+                <div class="progress" style="width: 85%;"></div>
+                <span class="percentage">85%</span>
+            </div>
         </div>
     </section>
+</section>
 
-    <!-- Skills contact
-    <section class="Contact">
-        <div class="Contact-text">
-            <h2>Contact me</h2>
-        </div>
-    </section> -->
+
+
+    </section>
+    
 
 
 </main>
-
-
-
-
-
 
 <!-- Footer section -->
 <footer class="footer">
