--- a/index.html
+++ b/index.html
@@ -4,113 +4,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <!-- Link to external CSS file -->
     <link rel="stylesheet" href="CSS/Style.css">
-
-    <!-- ICON -->
     <link rel="icon" href="Resources/Logo-removebg-preview.png" type="image/png">
 </head>
-
 <body>
 
-    <video  autoplay muted loop id="video-background">
+    <video autoplay muted loop id="video-background">
         <source src="Resources/12716-241674181_small.mp4" type="video/mp4">
     </video>
-        
 
- <!--Header of the website-->
- <header>
-    <div class="logo-container">
-        <img src="Resources/Logo-removebg-preview.png" alt="logo-portfolio">
-    </div>
-
-    <h1>Portfolio</h1>
-<!-- Navigation bar -->
-<nav>
-    <ul>
-        <li><a href="#About-section">About me</a></li>
-        <li><a href="#Projects">Projects</a></li>
-        <li><a href="#Skills">Skills</a></li>
-        <li><a href="skill.html">Contact me</a></li>
-    </ul>
-<h2>Anderson Estiduar Blandón ALvarez</h2>    
-</nav>
-
-</header>
-
-
-<!-- About me section -->
-<section class="About-section">
-    <div class="about-text">
-        <h2>About me</h2>
-        <p>I’m a software developer with strong skills in web development.
-        I work with HTML and CSS to build responsive and user-friendly interfaces. 
-        I use JavaScript to add interactivity and dynamic features to websites. 
-        On the backend, I work with PHP to handle server-side logic and database connections.</p>
-    </div>  
-    <!-- About image -->
-    <div class="about-image">
-        <img src="Resources/WhatsApp Image 2025-05-25 at 4.09.04 PM.jpeg" alt="Developer" id="dev">
-    </div>
-</section>
-
-
-
-
-    <section class="Skills">
-        <div class="Skills-text">
-            <h2>My skills</h2>
-            <p>My software knowledge</p>
+    <header>
+        <div class="logo-container">
+            <img src="Resources/Logo-removebg-preview.png" alt="logo-portfolio">
         </div>
+        <h1>Portfolio</h1>
+        <nav>
+            <ul>
+                <li><a href="#About">About me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="#Skills">Skills</a></li>
+                <li><a href="skill.html">Contact me</a></li>
+            </ul>
+            <h2>Anderson Estiduar Blandón ALvarez</h2>
+        </nav>
+    </header>
 
-        <div class="skill">
-            <span>PHP</span>
-            <div class="progress-bar">
-                <div class="progress" style="width: 75%;"></div>
-                <span class="percentage">75%</span>
+    <main>
+        <section id="About" class="About-section">
+            <div class="about-text">
+                <h2>About me</h2>
+                <p>I’m a software developer with strong skills in web development.
+                I work with HTML and CSS to build responsive and user-friendly interfaces. 
+                I use JavaScript to add interactivity and dynamic features to websites. 
+                On the backend, I work with PHP to handle server-side logic and database connections.</p>
+            </div>  
+            <div class="about-image">
+                <img src="Resources/WhatsApp Image 2025-05-25 at 4.09.04 PM.jpeg" alt="Developer" id="dev">
             </div>
-        </div>
+        </section>
 
-        <div class="skill">
-            <span>HTML</span>
-            <div class="progress-bar">
-                <div class="progress" style="width: 70%;"></div>
-                <span class="percentage">70%</span>
+        <section id="Skills" class="Skills">
+            <div class="Skills-text">
+                <h2>My skills</h2>
+                <p>My software knowledge</p>
             </div>
-        </div>
 
-        <div class="skill">
-            <span>CSS</span>
-            <div class="progress-bar">
-                <div class="progress" style="width: 95%;"></div>
-                <span class="percentage">95%</span>
+            <div class="skill">
+                <span>PHP</span>
+                <div class="progress-bar">
+                    <div class="progress" style="width: 75%;"></div>
+                    <span class="percentage">75%</span>
+                </div>
             </div>
-        </div>
 
-        <div class="skill">
-            <span>Photoshop</span>
-            <div class="progress-bar">
-                <div class="progress" style="width: 85%;"></div>
-                <span class="percentage">85%</span>
+            <div class="skill">
+                <span>HTML</span>
+                <div class="progress-bar">
+                    <div class="progress" style="width: 70%;"></div>
+                    <span class="percentage">70%</span>
+                </div>
             </div>
-        </div>
-    </section>
-</section>
 
+            <div class="skill">
+                <span>CSS</span>
+                <div class="progress-bar">
+                    <div class="progress" style="width: 95%;"></div>
+                    <span class="percentage">95%</span>
+                </div>
+            </div>
 
+            <div class="skill">
+                <span>Photoshop</span>
+                <div class="progress-bar">
+                    <div class="progress" style="width: 85%;"></div>
+                    <span class="percentage">85%</span>
+                </div>
+            </div>
+        </section>
+    </main>
 
-    </section>
-    
-
-
-</main>
-
-<!-- Footer section -->
-<footer class="footer">
-
-    &copy; <p>Anderson Estiduar Blandón - Riwi </p>
-    <p>2025</p>
-</footer>
-   
+    <footer class="footer">
+        <p>&copy; Anderson Estiduar Blandón - Riwi</p>
+        <p>2025</p>
+    </footer>
 </body>
 </html>
