--- a/skill.html
+++ b/skill.html
@@ -3,42 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
+    <link rel="stylesheet" href="CSS/Style.css">
 </head>
 <body>
 
-
 <main>
-    
+    <section id="Contact">
+        <h2>Contact me</h2>
+        <form action="#" method="post">
+            <label for="name">Name:</label><br>
+            <input type="text" name="name" id="name" required><br><br>
 
-<section id="Contact">
-    <h2>Contact me</h2>
-    <form action="#" method="post">
-        <label for="name">Name:</label><br>
-        <input type="text" name="name" id="name" required><br><br>
+            <label for="email">Email:</label><br>
+            <input type="email" name="email" id="email" required><br><br>
 
-        <label for="email">Email:</label><br>
-        <input type="email" name="email" id="email" required><br><br>
+            <label for="message">Message</label><br>
+            <textarea name="message" id="message" rows="5" required></textarea><br>
 
-        <label for="message">Message</label><br>
-        <textarea name="message" id="message" rows="5" required></textarea><br>
+            <button type="submit">Send</button>
+        </form>
+    </section>
 
-        <button type="submit">Send</button>
-    </form>
-</section>
-
-<a href="index.html">Regresar</a>
-
-
+    <a href="index.html">Regresar</a>
 </main>
 
-<!-- Footer section -->
 <footer class="footer">
-
-&copy; <p>Anderson Estiduar Blandón - Riwi </p>
-<p>2025</p>
+    <p>&copy; Anderson Estiduar Blandón - Riwi</p>
+    <p>2025</p>
 </footer>
 
-    
 </body>
 </html>
